Archive2/33/77561217a520b8/output
clang version 3.5.0 (tags/RELEASE_350/final 217394)
Target: x86_64-unknown-linux-gnu
Thread model: posix
main.cpp:17:5: error: no matching function for call to 'asFlatArray'
    asFlatArray(arr);
    ^~~~~~~~~~~
main.cpp:4:4: note: candidate template ignored: could not match 'T [][N]' against 'int [2][5]'
T* asFlatArray (T (&arr)[][N])
   ^
1 error generated.
